# GooeyPie

./: .gitignore  LICENSE  pyproject.toml
.agent/rules/: python-exectable.md
examples/: events_verification.py  hello_world.py
examples/containers/: container_test.py  frame_example.py  scrollable_frame_test.py
examples/events/: buttton_event_test.py  events.py
examples/layout/: align_test.py  span_test.py  stretch_test.py
examples/style/: buttons.py  dropdowns.py  entries.py  font_test.py  labels.py  style_test.py
examples/widgets/: buttons_test.py  checkbox_test.py  debug_dropdown_readonly.py  debug_dropdown_values.py  debug_empty_dropdown.py  dropdown_test.py  dropdown_test_gemini.py  entry_methods_test.py  entrys_test.py  image_button_test.py  image_test.py  justify_test.py  radiogroup_test.py  runtime_image_change.py  svg_test.py  verify_readonly_state.py
gooeypie/: __init__.py  app.py  base.py  containers.py  events.py  style.py
gooeypie/widgets/: __init__.py  button.py  checkbox.py  dropdown.py  entry.py  image.py  image_button.py  label.py  radiogroup.py  widget.py
