[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gooeypie"
version = "0.1.0"
description = "A wrapper around customtkinter"
dependencies = [
    "customtkinter",
    "packaging",
    "pillow>=12.0.0",
]

[project.optional-dependencies]
svg = [
    "svglib>=1.6.0",
    "reportlab>=4.4.7",
]
